--- a/iscrizione.html
+++ b/iscrizione.html
@@ -64,7 +64,7 @@
 
 <body>
 <div class="div1">
-  <a href="./compito1.html"> <img src="diaframma.jpg" alt="logo" style="width:40px;"> </a>
+  <a href="./index.html"> <img src="diaframma.jpg" alt="logo" style="width:40px;"> </a>
   <h2>CLICK&CLOCK</h2>
 </div>
 
