Errore di scrittura

--- a/iscrizione.html
+++ b/iscrizione.html
@@ -68,7 +68,7 @@
   <h2>CLICK&CLOCK</h2>
 </div>
 
-<h3 id="h3">Vuoi prenotare uno shotting? Sei nel posto giusto!</h3>
+<h3 id="h3">Vuoi prenotare uno shooting? Sei nel posto giusto!</h3>
 
     <form id="form">
         <div class="form-group">
